Update host configuration on SendEmailService

--- a/Covid19Data/Covid19Data/appsettings.json
+++ b/Covid19Data/Covid19Data/appsettings.json
@@ -17,7 +17,8 @@
     "Origin": "",
     "Subject": "Relatorio Covid-19",
     "Body": "Seguem dados atualizados da COVID-19",
-    "Password": ""
+    "Password": "",
+    "Host": "smtp.live.com"
   },
-  "Tempo":  "3"
+  "Tempo":  "120"
 }
